plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.78'
}

version = '1.0.0'
group = 'com.derko.seamlessapi'

base {
    archivesName = 'seamlessapi'
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

neoForge {
    version = neo_version
    // No run configs — this is a library/API mod only
}

tasks.withType(ProcessResources).configureEach {
    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand([
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            minecraft_version_range: minecraft_version_range
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
            artifactId = 'seamlessapi'
            groupId = 'com.derko.seamlessapi'
            version = project.version
        }
    }
    repositories {
        mavenLocal()
    }
}
